--- a/thmarket-service/order-service/pom.xml
+++ b/thmarket-service/order-service/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>thmarket-shop-parent</artifactId>
+        <artifactId>thmarket-service</artifactId>
         <groupId>com.thmarket</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>thmarket-server</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>eureka</module>
-        <module>eureka-server</module>
-    </modules>
+    <artifactId>order-service</artifactId>
 
 
 </project>
