--- a/thmarket-service/pom.xml
+++ b/thmarket-service/pom.xml
@@ -10,5 +10,29 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>thmarket-service</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>order-service</module>
+        <module>user-service</module>
+    </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ctrip.framework.apollo</groupId>
+            <artifactId>apollo-client</artifactId>
+            <version>${apollo.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
