zuul 网关服务（含Filter）

--- a/thmarket-server/pom.xml
+++ b/thmarket-server/pom.xml
@@ -12,8 +12,8 @@
     <artifactId>thmarket-server</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>eureka</module>
         <module>eureka-server</module>
+        <module>zuul-server</module>
     </modules>
 
 
