--- a/thmarket-server/pom.xml
+++ b/thmarket-server/pom.xml
@@ -11,10 +11,11 @@
 
     <artifactId>thmarket-server</artifactId>
     <packaging>pom</packaging>
+
     <modules>
         <module>eureka-server</module>
         <module>zuul-server</module>
+        <module>gateway-server</module>
     </modules>
-
 
 </project>
