--- a/thmarket-server/gateway-server/src/main/resources/application.yml
+++ b/thmarket-server/gateway-server/src/main/resources/application.yml
@@ -10,19 +10,10 @@ spring:
             locator:
                enabled: false
                lowerCaseServiceId: true
-            routes:
-               - id: thmarket-user-service
-                 uri: lb://THMARKET-USER-SERVICE
-                 predicates:
-                    - Path=/api/**
-                 filters:
-                    - StripPrefix=1
-
-
-eureka:
-   client:
-      service-url:
-         defaultZone: http://localhost:9100/eureka/
-   instance:
-      prefer-ip-address: true
-      instance-id: ${spring.cloud.client.ip-address}:${server.port}
+         routes:
+            - id: thmarket-user-service
+              uri: http://localhost:9000/
+              predicates:
+                 - Path=/api/**
+              filters:
+                 - StripPrefix=1
