--- a/thmarket-api/src/main/resources/application.yml
+++ b/thmarket-api/src/main/resources/application.yml
@@ -4,19 +4,19 @@ server:
 spring:
   application:
     name: thmarket-api
-#  zipkin:
-#    base-url: http://localhost:9411/
-#    locator:
-#      discovery:
-#        enabled: true
-#    sender:
-#      type: web
-#    sleuth:
-#      sampler:
-#        percentage: 1.0
-#        probability: 1
-#      web:
-#        skipPattern: (^cleanup.*)
+  zipkin:
+    base-url: http://localhost:9411/
+    locator:
+      discovery:
+        enabled: true
+    sender:
+      type: web
+    sleuth:
+      sampler:
+        percentage: 1.0
+        probability: 1
+      web:
+        skipPattern: (^cleanup.*)
 eureka:
   client:
     serviceUrl:
