--- a/thmarket-server/pom.xml
+++ b/thmarket-server/pom.xml
@@ -16,6 +16,7 @@
         <module>eureka-server</module>
         <module>zuul-server</module>
         <module>gateway-server</module>
+        <module>zipkin-server</module>
     </modules>
 
 </project>
